syntax = "proto3";

package payment;

service PaymentService {
  rpc Checkout(CheckoutRequest) returns (CheckoutResponse);
}

message CheckoutRequest { string user_id = 1; }

message CheckoutResponse { string stripe_session_url = 1; }